--- a/style.css
+++ b/style.css
@@ -4,10 +4,6 @@
     box-sizing: border-box;
 }
 
-.ms_bg_body {
-    background-color: rgb(29 45 60);
-    padding: 50px;
-}
 
 a {
     text-decoration: none;
@@ -18,13 +14,23 @@ ul {
     list-style-type: none;
 }
 
+img {
+    max-width: 100%;
+}
+
 .ms_bg_card {
     background-color: rgb(17 32 48);
 }
 
-img {
-    max-width: 100%;
+.ms_bg_body {
+    background-color: rgb(29 45 60);
+}
 
-    /* debug */
-    width: 300px;
+.ms_bg_navbar {
+    background-color: rgb(6 19 31);
+}
+
+.ms_logo {
+    width: 50px;
+    height: 50px;
 }
